# dino

./: .appveyor.yml  .appveyor.yml.in  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: interface.cmake  platform.cmake
cmake/interface/: CMakeLists.txt
include/dino/: dinex_args.hpp  dino.hpp  dll_api.hpp  handle.hpp
src/: dinex.cpp  dinex_constants.hpp.in  dino.cpp
tests/: CMakeLists.txt  dinex_test.cpp  dino_test.cpp
tests/lib/: lib.cpp  lib.hpp
